--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "declarations": true
   },
   "dependencies": {
+    "canvas": "^2.6.1",
     "echarts": "^4.7.0",
     "egg": "^2.15.1",
     "egg-scripts": "^2.11.0"
